--- a/SavegameAutoBackupAgent/packages.config
+++ b/SavegameAutoBackupAgent/packages.config
@@ -11,5 +11,9 @@
   <package id="MaterialDesignColors" version="0.0.0.0" targetFramework="net45" />
   <package id="MaterialDesignThemes" version="0.0.0.42" targetFramework="net45" />
   <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
+  <package id="RhinoMocks" version="3.6.1" targetFramework="net45" />
   <package id="SevenZipSharp" version="0.64" targetFramework="net45" />
+  <package id="System.IO.Abstractions" version="2.0.0.113" targetFramework="net45" />
+  <package id="System.IO.Abstractions.TestingHelpers" version="2.0.0.113" targetFramework="net45" />
+  <package id="SystemWrapper" version="0.4" targetFramework="net45" />
 </packages>
