--- a/SaveScumAgent.Tests/SaveScumAgent.Tests.csproj
+++ b/SaveScumAgent.Tests/SaveScumAgent.Tests.csproj
@@ -89,6 +89,7 @@
     <Compile Include="PathStringTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\PexAssemblyInfo.cs" />
+    <Compile Include="SpecialFolderHelperTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
